<resources>
    <string name="app_name">ParkSpace</string>
    <string name="pslogo">pslogo</string>
    <string name="welcome_to">Welcome to</string>
    <string name="parkspace">PARKSPACE</string>
    <string name="rectangle3">rectangle3</string>
    <string name="rectangle4">rectangle4</string>
    <string name="shapetop">shapetop</string>
    <string name="sign_in">Sign In</string>
    <string name="by_signing_in_you_are_agreeing_our">By signing in you are agreeing our</string>
    <string name="term_and_privacy_policy">Term and privacy policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="password">Password</string>
    <string name="visible">visible</string>
    <string name="invisible">invisible</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_connect_with">or connect with</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="imgbutton">imgbutton</string>
    <string name="button">button</string>
    <string name="_62">+62</string>
    <string name="backarrow">BackArrow</string>
    <string name="footer">footer</string>
    <string name="icon">icon</string>
    <string name="please_enter_your_email_address_to_receive_a_verification_number">Please Enter Your Email Address to Receive a Verification Number</string>
    <string name="send">Send</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="please_enter_the_4_digit_code_sent_to_mail">Please Enter The 4 Digit Code Sent to mail</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="your_new_password_must_be_different_from_previously_used_password">Your New Password Must Be Different from Previously Used Password</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="please_confirm_your_new_password">Please confirm your new password</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="locationlogo">locationlogo</string>
    <string name="location">location</string>
    <string name="hello">Hello,</string>
    <string name="seru">!</string>
    <string name="profilelogo">profilelogo</string>
    <string name="card1">card1</string>
    <string name="start">start</string>
    <string name="blank">. . .</string>
    <string name="min">min</string>
    <string name="km">km</string>
    <string name="cardticket">cardticket</string>
    <string name="strips">-</string>
    <string name="line1">line1</string>
    <string name="time_slot">Time Slot</string>
    <string name="price">Price</string>
    <string name="rp">Rp.</string>
    <string name="loca">Location</string>
    <string name="choose_parking_area">Choose Parking Area</string>
    <string name="profile">Profile</string>
    <string name="image">image</string>
    <string name="appoint">appoint</string>
    <string name="bookings">Bookings</string>
    <string name="clock">clock</string>
    <string name="hours">Hours</string>
    <string name="money_bag">Money Bag</string>
    <string name="saldo">Saldo</string>
    <string name="about_us">About Us</string>
    <string name="by">By</string>
    <string name="xlipse">XLIPSE:</string>
    <string name="azzahra_ayu_vahendra">Azzahra Ayu Vahendra</string>
    <string name="almira_dharma_utami_fadillah">Almira Dharma Utami Fadillah</string>
    <string name="dhafin_taufiqi">Dhafin Taufiqi</string>
    <string name="dimas_ajisaka_kurniawan">Dimas Ajisaka Kurniawan</string>
    <string name="rangga_kalam_sidiq">Rangga Kalam Sidiq</string>
    <string name="color1">color1</string>
    <string name="choosen">Choosen</string>
    <string name="available">Available</string>
    <string name="filled">Filled</string>
    <string name="choose_area">Choose Area</string>
    <string name="map1">map1</string>
    <string name="a1">a1</string>
    <string name="a2">a2</string>
    <string name="map5">map5</string>
    <string name="map2">map2</string>
    <string name="map4">map4</string>
    <string name="exit">exit</string>
    <string name="map3">map3</string>
    <string name="entrance">entrance</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="no_parking">No Parking</string>
    <string name="floor_desc">Floor Desc</string>
    <string name="more_information">More Information</string>
    <string name="book_id">Book ID</string>
    <string name="locat">Location</string>
    <string name="distance">Distance</string>
    <string name="destination">Destination</string>
    <string name="barcode">barcode</string>
    <string name="estimation">Estimation</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="please_wait">Please Wait...</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="upload_a_photo_under_5_mb">Upload a photo under 5 mb</string>
    <string name="upload">Upload</string>
    <string name="xlipse2">XLIPSE</string>
    <string name="aplikasi_parkspace_ini_hadir_agar_memudahkan_user_untuk_membooking_parkir_secara_online_jadi_ketika_sudah_sampai_di_tempat_parkir_user_sudah_mengetahui_dibagian_mana_kita_harus_parkir_tanpa_harus_mencari_sendiri_lahan_parkir_yang_kosong_itu_disebelah_mana">Aplikasi ParkSpace ini hadir agar memudahkan user untuk membooking parkir secara online, jadi ketika sudah sampai di tempat parkir user sudah mengetahui dibagian mana kita harus parkir tanpa harus mencari sendiri lahan parkir yang kosong itu disebelah mana.</string>
    <string name="dengan_begitu_diharapkan_dapat_lebih_mengefisienkan_waktu_dan_dapat_mempermudah_untuk_pencarian_parkir">Dengan begitu diharapkan dapat lebih mengefisienkan waktu dan dapat mempermudah untuk pencarian parkir.</string>
    <string name="strip">-</string>
    <string name="team">Team</string>
    <string name="almira_d_u_f">Almira D. U. F.</string>
    <string name="sa_documentation"><![CDATA[SA & Documentation]]></string>
    <string name="azzahra_a_f">Azzahra A. F.</string>
    <string name="ui_ux_designer_sqa"><![CDATA[UI/UX Designer & SQA]]></string>
    <string name="dimas_a_k">Dimas A. K.</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="dhafin_t">Dhafin T.</string>
    <string name="project_manager">Project Manager</string>
    <string name="rangga_k_s">Rangga K. S.</string>
    <string name="backend_developer">Backend Developer</string>
</resources>