<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.AboutActivity"
    android:background="?attr/bg">

    <!--App Bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp">

        <ImageButton
            android:id="@+id/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:backgroundTint="?attr/boldText"
            android:contentDescription="@string/backarrow" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/backarrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/about_us"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="?attr/boldText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/pslogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/pslogo"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/logodesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pslogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/product_sans_bold"
        android:textColor="?attr/boldText"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/parkspace"/>

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logodesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/product_sans_bold"
        android:textColor="?attr/boldText"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/by"/>

    <TextView
        android:id="@+id/xlipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/product_sans_bold"
        android:textColor="?attr/boldText"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/xlipse"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/xlipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="?attr/mediumText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/azzahra_ayu_vahendra"/>

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="?attr/mediumText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/almira_dharma_utami_fadillah"/>

        <TextView
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="?attr/mediumText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/dhafin_taufiqi"/>

        <TextView
            android:id="@+id/name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="?attr/mediumText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/dimas_ajisaka_kurniawan"/>

        <TextView
            android:id="@+id/name5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/product_sans_medium"
            android:textColor="?attr/mediumText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/rangga_kalam_sidiq"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>