<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp">
    
    <ImageView
        android:id="@+id/imageSlideIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="194dp"
        android:contentDescription="@string/app_name"/>
    
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/title"
        android:textSize="22sp"
        android:textColor="?attr/boldText"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/description"
            android:textColor="?attr/regularText"
            android:textSize="16sp"
            android:textAlignment="center"
            tools:ignore="NotSibling" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>