<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.SignUpHeader">

    <!-- logo -->
    <View
        android:id="@+id/pslogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:background="@drawable/pslogo"
        android:contentDescription="@string/pslogo"/>


    <!-- group text -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/pslogo"
        app:layout_constraintStart_toEndOf="@id/pslogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/pslogo"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <!-- sign -->
        <TextView
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="20sp"
            android:textColor="?attr/boldText"
            android:text="@string/sign_up"/>

        <!-- policy -->
        <TextView
            android:id="@+id/term"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/product_sans_regular"
            android:textSize="16sp"
            android:textColor="?attr/regularText"
            android:text="@string/by_signing_in_you_are_agreeing_our"/>

        <!-- policy -->
        <TextView
            android:id="@+id/policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/term"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/product_sans_regular"
            android:textSize="16sp"
            android:textColor="@color/peaceful_river"
            android:text="@string/term_and_privacy_policy"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>