<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.SignIn">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Username -->
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="38dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/product_sans_medium"
                android:textSize="14sp"
                android:textColor="?attr/mediumText"
                android:text="@string/username"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputusername"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_field"
                android:padding="10dp"
                android:hint="@string/enter_your_username"
                android:textSize="14sp"
                android:textColor="?attr/regularText"
                android:textColorHint="?attr/typing"
                android:inputType="text"/>

            <!-- password -->
            <TextView
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputusername"
                android:layout_marginTop="16dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/product_sans_medium"
                android:textSize="14sp"
                android:textColor="?attr/mediumText"
                android:text="@string/password"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputpass"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/pass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tooggle"
                android:layout_marginTop="6dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/bg_field"
                android:hint="@string/please_enter_your_password"
                android:textSize="14sp"
                android:textColor="?attr/regularText"
                android:textColorHint="?attr/typing"/>

            <!-- Tooggle -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tooggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/inputpass"
                app:layout_constraintTop_toTopOf="@id/inputpass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/inputpass"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_baseline_visibility_24"
                    android:visibility="invisible"
                    android:contentDescription="@string/visible" />

                <ImageView
                    android:id="@+id/invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    android:contentDescription="@string/invisible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Forgot Pass -->
            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/inputpass"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/product_sans_medium"
                android:textSize="14sp"
                android:textColor="@color/cherry_paddle_pop"
                android:text="@string/forgot_password"/>

            <!-- Button Sign -->
            <Button
                android:id="@+id/push"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotpass"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/sign_in"
                android:textSize="14sp"
                android:backgroundTint="@color/calgar_blue"
                android:textAllCaps="false"
                app:circularflow_radiusInDP="50"/>

            <!-- or conn -->
            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/push"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="14sp"
                android:textColor="?attr/regularText"
                android:text="@string/or_connect_with"/>

            <!-- button google -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bgoogle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_field"
                android:padding="10dp">

                <!-- Group Content -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buttoncontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <!-- Google Logo -->
                    <ImageView
                        android:id="@+id/googlelogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/googletext"
                        android:src="@drawable/google"
                        android:contentDescription="@string/button"/>

                    <!-- Text -->
                    <TextView
                        android:id="@+id/googletext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/googlelogo"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="22dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:textSize="14sp"
                        android:textColor="?attr/mediumText"
                        android:text="@string/sign_in_with_google"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Group Don't have account -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bgoogle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="10dp">

                <!-- dont have account -->
                <TextView
                    android:id="@+id/account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:fontFamily="@font/product_sans_medium"
                    android:textSize="14sp"
                    android:textColor="?attr/mediumText"
                    android:text="@string/don_t_have_an_account"/>

                <!-- dont have account -->
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/account"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/product_sans_medium"
                    android:textSize="14sp"
                    android:textColor="@color/calgar_blue"
                    android:text="@string/sign_up"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>